add jquery logic

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <form>
           <div class="col-xs-4">
               <div class="input-group">
-                  <input type="text" class="form-control" placeholder="Rock, Paper or Scissors">
+                  <input id="user-choice-input" type="text" class="form-control" placeholder="Rock, Paper or Scissors">
                   <span class="input-group-btn">
                       <button type="button" class="btn btn-default" id="button">Play!</button>
                   </span>
